2003/11/03 12:45 muppetman

	D xs/GtkHScrollBar.xs
	A xs/GtkHScrollbar.xs
	D xs/GtkVScrollBar.xs
	A xs/GtkVScrollbar.xs
	long ago, in the early days of gtk2-perl-xs, these files were
	created with the wrong capitalization of the file and package
	names; register.xsh registers Gtk2::[VH]Scrollbar, but the
	files implement Gtk2::[VH]ScrollBar.  since this is wrong, i have
	corrected it by changing the package names and renaming the files,
	but in order to retain compatibility with Gtk2-1.00, the old
	Gtk2::[VH]ScrollBar::new()s are aliased to the new ones. 

2003/11/02 23:26 pcg

        * xs/GdkPixbuf.xs, api.pod: Implement and document
        gdk_pixbuf_render_pixmap_and_mask* functions.

2003/11/02 13:24 pcg

	* api.pod: Document Scrollbar vs. ScrollBar inconsistency.

2003/11/02 16:17 muppetman

	* Gtk2.pm: undo my silly "atleast" version checks, and so something
	more like what Exporter would do.  we don't use Exporter directly
	because we're not an exporter, and we still need to watch for -init.

	* Makefile.PL: Glib doesn't use the "atleast" check anymore, either.

2003/11/02 02:12 muppetman

	* xs/GtkButton.xs: after fixing the GenPod bug, it became apparent
	that button's doc needed to hide label on new_with_mnemonic, too.
	while i was at it, fleshed out the description of mnemonics to make
	more sense to people who've never heard of them.

2003/11/01 14:52 rwmcfa1

	* xs/Button.xs: autopod doc added

2003/10/30 22:10 rwmcfa1

	* t/30.GtkCellRenderer.t: this test seems kinda flaky, it was counting 
	that 24 callbacks happened, but often that number seems inconsistent. 
	slight modifications made so that we now check that at least one, edit, 
	render, size, and init happen. activate doesn't seem to ever occur.

2003/10/29 12:40 muppetman

	fixing a few things while tracking down bugs reported by
	Bjarne Steinsbø:

	* xs/GtkCellRenderer.xs, xs/GtkStyle.xs: all of the gtk_paint_foo()
	functions ask for GdkWindows, but actually work on GdkDrawables.