@@ -1,0 +1,6 @@
+# these xs files implement types that were introduced in gtk+ 2.2.0.
+# one filename per line, whitespace and comments are ignored.
+xs/GdkDisplay.xs
+xs/GdkDisplayManager.xs
+xs/GdkScreen.xs
+xs/GtkClipboard.xs
