@@ -1,5 +1,11 @@
 2003/11/03 12:45 muppetman
 
+	A xs_files-2.0: new file listing source files for gtk+-2.0.x
+	A xs_files-2.2: new file listing source files for gtk+-2.2.x
+	* CodeGen.pm, Makefile.PL: modify build to use explicit lists of
+	source code files based on the discovered gtk+ version, rather
+	than just globbing all the files the xs dir.
+
 	D xs/GtkHScrollBar.xs
 	A xs/GtkHScrollbar.xs
 	D xs/GtkVScrollBar.xs
